hphp/hack/test/sound_dynamic/typing/supportdyn_shapes_idx.bad.php.exp
File "supportdyn_shapes_idx.bad.php", line 16, characters 13-41:
Invalid argument (Typing[4110])
  File "supportdyn_shapes_idx.bad.php", line 11, characters 31-31:
  Expected `C`
  File "Shapes.hhi", line 40, characters 28-30:
  But got `dynamic`
File "supportdyn_shapes_idx.bad.php", line 16, characters 34-40:
Invalid argument (Typing[4110])
  File "supportdyn_shapes_idx.bad.php", line 16, characters 21-23:
  Expected `~_` because type parameter `Tv` of `idx` could not be determined. Please add explicit type parameters to the invocation of `idx`
  File "", line 0, characters 0-0:
    via this generic `Tv`
  File "supportdyn_shapes_idx.bad.php", line 16, characters 38-38:
  But got `C`
File "supportdyn_shapes_idx.bad.php", line 16, characters 34-40:
Typing error (Typing[4110])
  File "supportdyn_shapes_idx.bad.php", line 16, characters 38-38:
  Expected `dynamic`
  File "supportdyn_shapes_idx.bad.php", line 16, characters 38-38:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
